# Documentation-Templates

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
config/: docs_map.yml
docs/: health-monitor-etl-tools.md
src/: claude_client.py  cli.py  config.py  confluence_client.py  create.py  discover.py  docs_mapper.py  git_client.py  pipeline.py  publish.py
templates/: api.md  etl.md  sql_table.md  tool.md  writing_standards.md
tests/: conftest.py
